--- a/package.json
+++ b/package.json
@@ -5,12 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
-    "pre-commit": "lint-staged",
-    "prepare": "node prepare.js",
-    "start:test-server": "node -r dotenv/config --experimental-json-modules e2e/test-server.js",
-    "test:playwright": "set NODE_OPTIONS=--experimental-vm-modules -r dotenv/config --experimental-json-modules && npx playwright test",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "author": "neel networks",
   "license": "ISC",
